fix extra space on mobile and make glass button rectangle

--- a/components/ui/GlassButton/GlassButton.css
+++ b/components/ui/GlassButton/GlassButton.css
@@ -16,13 +16,10 @@
   --anim--hover-ease: cubic-bezier(0.25, 1, 0.5, 1);
 }
 
-/* ========== BUTTON ========== */
-
-/* Button Wrap Container */
 .button-wrap {
   position: relative;
   z-index: 2;
-  border-radius: 999vw;
+  /* border-radius: 999vw; */
   background: transparent;
   pointer-events: none;
   transition: all var(--anim--hover-time) var(--anim--hover-ease);
@@ -50,7 +47,7 @@
   position: absolute;
   z-index: 0;
   inset: 0;
-  border-radius: 999vw;
+  /* border-radius: 999vw; */
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
   width: calc(100% - var(--shadow-cuttoff-fix) - 0.25em);
   height: calc(100% - var(--shadow-cuttoff-fix) - 0.25em);
@@ -82,7 +79,7 @@ button {
     rgba(255, 255, 255, 0.2),
     rgba(255, 255, 255, 0.05)
   );
-  border-radius: 999vw;
+  /* border-radius: 999vw; */
   box-shadow: inset 0 0.125em 0.125em rgba(0, 0, 0, 0.05),
     inset 0 -0.125em 0.125em rgba(255, 255, 255, 0.5),
     0 0.25em 0.125em -0.125em rgba(0, 0, 0, 0.2),
@@ -139,7 +136,7 @@ button span::after {
   top: calc(0% + var(--border-width) / 2);
   left: calc(0% + var(--border-width) / 2);
   box-sizing: border-box;
-  border-radius: 999vw;
+  /* border-radius: 999vw; */
   overflow: clip;
   background: linear-gradient(
     var(--angle-2),
@@ -183,7 +180,7 @@ button::after {
   position: absolute;
   z-index: 1;
   inset: 0;
-  border-radius: 999vw;
+  /* border-radius: 999vw; */
   width: calc(100% + var(--border-width));
   height: calc(100% + var(--border-width));
   top: calc(0% - var(--border-width) / 2);
